--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@
     width: 100%;
     height: 1080px;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
+
 }
 
 .navigation {
@@ -52,9 +53,9 @@
 
 }
 
-/* secons section styles */
+/* second section styles */
+
 .question {
-    margin-top: 139px;
     margin-bottom: 43px;
     font-size: 50px;
 }
@@ -67,17 +68,24 @@
 /* 3rd section styles */
 .image-wraper {
     background-image: url(../images/Rectangle\ 263.png);
+    max-width: 1920px;
     width: 100%;
-    height: 852px;
+    /* height: 852px; */
     margin-top: 168px;
 
 
 }
 
-.image-box {
+.courier {
+    max-width: 809px;
+    width: 100%;
+    height: 809px;
+}
+
+/* .image-box {
     margin-top: 354px;
     margin-left: 43px;
-}
+} */
 
 .slogan3 {
     font-size: 47px;
@@ -86,7 +94,8 @@
 
 .slogan-text {
     font-size: 20px;
-    width: 449px;
+    max-width: 449px;
+    width: 100%;
 }
 
 /* 4th section styles */
@@ -98,8 +107,9 @@
 }
 
 .card-img {
-    width: 444px;
-    height: 302px;
+    max-width: 350px;
+    width: 100%;
+    height: 250px;
 }
 
 .card-btn {
@@ -154,7 +164,7 @@
 /* last section styles */
 .image-wraper2 {
     background-image: url(../images/Rectangle\ 274.png);
-    height: 564px;
+    /* height: 564px; */
     width: 100%;
     padding: 150px;
     gap: 49px;
