--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,9 @@
     background-image: url(../images/Untitled-1.png);
     width: 100%;
     height: 1080px;
+    margin-bottom: 139px;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
 
 }
 
@@ -166,13 +167,15 @@
     background-image: url(../images/Rectangle\ 274.png);
     /* height: 564px; */
     width: 100%;
-    padding: 150px;
+    padding-top: 120px;
+
+    /* padding: 40px; */
     gap: 49px;
 }
 
 .card-box {
-    width: 250px;
-    height: 250px;
+    width: 300px;
+    height: 300px;
 }
 
 .card-img1 {
@@ -191,4 +194,10 @@
 
 .bottom-title {
     width: 140px;
+}
+
+.line {
+    width: 50px;
+    height: 3px;
+    margin-bottom: 18px;
 }
