--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@
 }
 
 .ads {
-    margin-left: 235px;
+    /* margin-left: 235px; */
 }
 
 .header-btn {
@@ -84,7 +84,7 @@
 .courier {
     max-width: 809px;
     width: 100%;
-    height: 809px;
+    /* height: 809px; */
 }
 
 /* .image-box {
