--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,11 @@
     margin-top: 27px;
 }
 
+.flex-icon-boxes {
+    width: 248px;
+    height: 236px;
+}
+
 
 /* 3rd section styles */
 .image-wraper {
